[edit] 비쥬얼 작업

--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>별자리 찾기</title>
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Find Your Constellation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="background"></div>
-    <container class="wrapper">
-        <div class="type">별자리 찾기</div>
-        <div class="section main">
-            <div class="title">생일을 입력하세요</div>
-            <select id="birthMonth" class="selectBox"></select>
-            <select id="birthDay" class="selectBox"></select>
-            <input id="getCntconstella" type="button" value="검색하기">
-        </div>
-        <div class="section sub">
-            <div id="constellation"></div>
-        </div>
-    </container>
 
-    <script src="birthDayToConstellation.js"></script>
+    <div class="bgWarpper">
+        <div class="siteTitle">Find Your Constellation</div>
+        <div class="bgLine"></div>
+        <div class="frame"></div>
+        <div class="background"></div>s
+    </div>
+    <div class="wrapper">
+        <div class="section main">
+            <div class="title"><b>Select</b> your</br> date of <b>birth</b></div>
+            <div class="btnGroup">
+                <div class="selectGroup">
+                    <p>Month</p>
+                    <select class="selectBox birthMonth"></select>
+                    <div class="arrow"></div>
+                    <div class="line"></div>
+                </div>
+                <div class="selectGroup">
+                    <p>Day</p>
+                    <select class="selectBox birthDay"></select>
+                    <div class="arrow"></div>
+                </div>
+
+                <input class="getCntconstella" type="button" value="Find!">
+            </div>
+        </div>
+    </div>
+    <div class="section sub">
+        <div class="constellation result"></div>
+    </div>
+
+    <script src="js/birthDayToConstellation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="js/background.js "></script>
 </body>
 
 </html>
