[edit] find 버튼을 누르면 해당 별자리 이미지 나타나기 기능 추가

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="siteTitle">Find Your Constellation</div>
         <div class="bgLine"></div>
         <div class="frame"></div>
+        <img class="starImg" src="../findConstellation/img/Pisces.png">
         <canvas class="background" width="1920" height="1080"></canvas>
     </div>
     <div class="wrapper">
