--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Find Your Constellation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mouseFollower.css">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script defer src="js/background.js "></script>
 </head>
 
 <body>
@@ -48,8 +50,6 @@
     <div class="constellation result"></div>
 
     <script src="js/birthDayToConstellation.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    <script src="js/background.js "></script>
     <script src="js/mouseEvent.js "></script>
 </body>
 
